--- a/angular-13/package.json
+++ b/angular-13/package.json
@@ -25,21 +25,23 @@
     "@ng-bootstrap/ng-bootstrap": "12.0.0-beta.4",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
-    "@popperjs/core": "^2.11.0",
-    "apexcharts": "^3.25.0",
+    "@popperjs/core": "^2.11.6",
     "angular-feather": "^6.0.10",
     "angular-notifier": "^6.0.1",
-    "bootstrap": "^5.0.3",
+    "apexcharts": "^3.25.0",
+    "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.7.0",
     "chart.js": "^2.8.0",
     "chartjs-color": "^2.4.1",
+    "jquery": "^3.6.3",
     "ng-apexcharts": "^1.5.6",
     "ng2-charts": "^2.4.2",
     "ngx-perfect-scrollbar": "^9.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.5.4",
     "sass": "^1.29.0",
-    "tslib": "^2.0.0",
+    "tslib": "1.10.0",
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
@@ -53,7 +55,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.0.13",
-    "codelyzer": "^6.0.1",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
